# ODEsolvers

./: LICENSE  README.md  TODO.md  pyproject.toml
problems/: 2body.py  BZ.py  BZ_perf.py  Brusselator.py  Brusselator_perf.py  N_body.py  N_body_perf.py  compare_controlled.py  compare_expl.py  compare_extrap.py  convergence.py  duffing.py  efficiency.py  lorenz.py  robertson.py  test_controlled.py  test_expl.py  test_extrap.py  test_impl.py  vanPol.py  work_precision.py
solvers/: Extrapolation_Scheme.py
src/modules/: helpers.py  post_processing.py  root_finding.py  step_control.py
src/solvers/: Extrapolation_Scheme.py  embedded.py  explicit.py  helpers.py  implicit.py  root_finding.py  simple.py
tests/: test_convergence.py  test_helpers.py
